refactor(racing): CarDTO의 비교 책임을 Car로 이동
- CarDTO의 비교 대신 Car의 비교로 변경
- CarDistanceComparator 클래스 생성, CarDtoDistanceComparator 클래스 삭제